# cudaFHE

./: CMakeLists.txt
include/: cudaFHE.h
